Correction getFirst()